src/objects/ENC_Encuesta__c.object
<CustomObject>
    <description>Representa al conjunto de datos que se van a trabajar a lo largo de la Encuesta.</description>
    <fields>
        <fullName>ENC_DAT_Fecha_Hora__c</fullName>
        <description>Fecha y hora en la que se realizó la encuesta</description>
        <label>Fecha/Hora Encuesta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ENC_LKP_Caso__c</fullName>
        <description>Intervención sobre la que se realiza la encuesta.</description>
        <label>Intervención</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Encuestas Realizadas</relationshipLabel>
        <relationshipName>EncuestasRealizadas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ENC_LKP_Encuesta_Tipo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Encuesta Tipo vinculada. Modelo de encuesta realizada.</description>
        <label>Encuesta Tipo</label>
        <referenceTo>ENC_Encuesta_Tipo__c</referenceTo>
        <relationshipLabel>Encuestas Realizadas</relationshipLabel>
        <relationshipName>EncuestasRealizadas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENC_NUM_Duracion__c</fullName>
        <description>Duración de la encuesta en segundos</description>
        <label>Duración</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENC_TXT_Codigo_Mov__c</fullName>
        <description>Indica si la encuesta ha sido realizada o retirada. Si el código movimiento vale 2, significa que las encuestas van a venir con respuestas. Si vale 1, la encuesta vendrá sin respuestas y no habrá que hacer comprobaciones</description>
        <label>Código de Movimiento</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENC_TXT_Gestor__c</fullName>
        <description>Gestor que realizó la encuesta</description>
        <label>Gestor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENC_TXT_Motivo_Retirada__c</fullName>
        <description>Indica el motivo de la retirada de la encuesta debido a que no se ha podido contactar con el cliente.</description>
        <label>Motivo de Retirada</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENC_TXT_Tipo_Comunicacion__c</fullName>
        <description>Indica el Tipo de Comunicación (si la encuesta se realiza vía SMS o telefónica)</description>
        <label>Tipo de Comunicación</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENC_TXT_Tipo_Producto__c</fullName>
        <description>Indica el Tipo de Producto de la póliza (Hogar/Comercio)</description>
        <label>Tipo de Producto</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Encuesta Realizada</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encuestas Realizadas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>